package org.example.ast;

public interface EvaluableComponent extends AstComponent {
}
