package org.example.ast;

public interface IdentifierComponent extends AstComponent {}
